--- a/css/style.css
+++ b/css/style.css
@@ -575,6 +575,79 @@ img {
 .footer-social-svg {
 }
 
+.footer-subscribe {
+  margin-left: 93px;
+}
+
+.footer-subscribe-title {
+  font-weight: 700;
+  font-size: 14px;
+  text-transform: uppercase;
+  color: var(--white);
+  margin-bottom: 20px;
+}
+
+.footer-subscribe-form {
+  display: flex;
+}
+
+.footer-subscribe-input {
+  height: 50px;
+  width: 358px;
+  padding: 15px 16px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: var(--bg-color-main);
+  color: var(--white);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-subscribe-input:focus {
+  border-color: var(--accent-blue);
+  outline: none;
+}
+
+.footer-subscribe-input::placeholder {
+  font-size: 16px;
+  line-height: 1.25;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.subscribe-button {
+  background-color: var(--accent-blue);
+  color: var(--white);
+  width: 200px;
+  height: 50px;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  text-align: center;
+  align-items: center;
+  cursor: pointer;
+  display: flex;
+  margin: 0 auto;
+  padding: 10px 28px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: 0;
+  border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-left: 12px;
+}
+
+.subscribe-button:hover,
+.subscribe-button:focus {
+  background-color: var(--accent-btn-blue);
+}
+
+.footer-subscribe-svg {
+  fill: var(--white);
+  margin-left: 10px;
+}
+
+/* Modal */
+
 .backdrop {
   position: fixed;
   top: 0;
@@ -586,15 +659,149 @@ img {
 }
 
 .modal {
-  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px 0;
+  height: 100%;
+}
+
+.modal-container {
+  /* position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); */
+  position: relative;
   width: 100%;
   max-width: 528px;
   height: 100%;
   max-height: 581px;
   background-color: var(--white);
+  padding: 40px;
+  overflow-y: auto;
+}
+
+.modal-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-bottom: 12px;
+}
+
+.modal-form {
+  font-size: 12px;
+}
+
+.modal-form-input {
+  position: relative;
+
+  margin-top: 4px;
+  margin-bottom: 10px;
+}
+
+.modal-input {
+  resize: none;
+  padding: 11px 12px;
+  width: 448px;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 12px 12px 12px 42px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus {
+  border-color: var(--accent-blue);
+  outline: none;
+}
+
+.modal-input:focus + .modal-form-icon {
+  color: var(--accent-blue);
+}
+
+.modal-form-icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  fill: currentColor;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.user-comment {
+  height: 120px;
+  padding: 12px 16px;
+  display: block;
+}
+
+.user-comment::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.modal-user-submit {
+  margin-top: 20px;
+  position: relative;
+}
+
+.user-accept-lable {
+  position: relative;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  padding-left: 36px;
+  cursor: pointer;
+}
+
+.user-accept-checkbox {
+  appearance: none;
+  /* width: 16px;
+  height: 15px; */
+}
+
+.icon-checkbox {
+  position: absolute;
+  top: 50%;
+  left: 13px;
+  transform: translateY(-50%);
+  width: 16px;
+  height: 15px;
+  background: var(--white);
+  border-radius: 2px;
+  border: 1.5px solid #212121;
+  color: var(--white);
+  fill: transparent;
+  cursor: pointer;
+}
+
+.user-accept-checkbox:checked + .icon-checkbox {
+  fill: currentColor;
+  background-color: var(--accent-blue);
+  border-color: var(--accent-blue);
+}
+
+.modal-submit-button {
+  background-color: var(--accent-blue);
+  color: var(--white);
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  text-align: center;
+  cursor: pointer;
+  display: block;
+  margin: 30px auto 0px;
+  padding: 10px 52px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: 0;
+  border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-submit-button:hover,
+.modal-submit-button:focus {
+  background-color: var(--accent-btn-blue);
 }
 
 .close-button {
