--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ img {
   justify-content: space-between;
 }
 
-.navigation {
+.header-navigation {
   letter-spacing: 0.02em;
   display: flex;
   align-items: center;
@@ -102,12 +102,12 @@ img {
   padding: 24px 0 25px;
 }
 
-.header-navigation-list {
+.header-navigation__list {
   display: flex;
   margin-right: auto;
 }
 
-.navigation-link {
+.header-navigation__link {
   padding: 32px 0;
   color: var(--color-title);
   font-weight: 500;
@@ -118,16 +118,16 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.navigation-link:hover,
-.navigation-link:focus {
+.header-navigation__link:hover,
+.header-navigation__link:focus {
   color: var(--accent-blue);
 }
 
-.navigation-link.current-page {
+.header-navigation__link--current-page {
   position: relative;
 }
 
-.navigation-link.current-page::after {
+.header-navigation__link--current-page::after {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -137,7 +137,7 @@ img {
   content: "";
 }
 
-.header-navigation-list > li:not(:last-child) {
+.header-navigation__list > li:not(:last-child) {
   margin-right: 50px;
 }
 
@@ -176,7 +176,7 @@ img {
   margin-right: 50px;
 }
 
-.current-page {
+.header-navigation__link--current-page {
   padding: 32px 0;
   color: var(--accent-blue);
   font-weight: 500;
@@ -529,7 +529,7 @@ img {
 }
 
 .footer-social {
-  margin-left: 70px;
+  margin-left: 93px;
 }
 
 .footer-social-title {
@@ -734,6 +734,7 @@ img {
   height: 120px;
   padding: 12px 16px;
   display: block;
+  margin-top: 4px;
 }
 
 .user-comment::placeholder {
